validate config, add transactions
